--- a/nestjs/blog-api/package.json
+++ b/nestjs/blog-api/package.json
@@ -28,6 +28,7 @@
     "@nestjs/passport": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "bcrypt": "^5.1.0",
+    "class-validator": "^0.14.0",
     "dotenv": "^16.3.1",
     "mongoose": "^7.4.2",
     "passport": "^0.6.0",
